# riscv-t6

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: cpu.cpp  cpu.hpp  disassembler.cpp  disassembler.hpp  loader.cpp  loader.hpp  main.cpp  memory.hpp  syscalls.cpp  syscalls.hpp
tests/: arraymax.s  hello.elf  hello.s  riscvtest.s  sum.s
tools/: assemble.py  make_riscvtest.py  wrap_elf.py
